# python-project-lvl4

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml  superlinter.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/label/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/label/migrations/: 0001_initial.py
task_manager/status/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py
task_manager/task/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task/migrations/: 0001_initial.py  0002_alter_task_labels.py
task_manager/templates/: base.html  create.html  index.html  users.html
task_manager/templates/label/: labels_create.html  labels_list.html
task_manager/templates/status/: status_delete.html  status_edit.html  statuslist.html
task_manager/templates/task/: task_create.html  task_delete.html  task_edit.html  tasklist.html
task_manager/templates/users/: create.html  delete_user.html  edit_user.html  login.html  logout.html  users.html
task_manager/users/: admin.py  delete_mixin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_status.py  0003_task.py  0004_label.py  0005_task_lable.py  0006_rename_lable_task_lables.py  0007_rename_lables_task_labels.py  0008_auto_20220105_1400.py  0009_auto_20220105_1407.py  0010_auto_20220109_1537.py
