[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["grins <potemkuh@gmail.com>"]
packages = [
  { include = "task_manager" },
]


[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-bootstrap4 = "^3.0.1"
django-filter = "^21.1"
rollbar = "^0.16.2"
dj-database-url = "^0.5.0"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.2"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
